--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3979,6 +3979,7 @@ input[type=button].btn-block {
     display: block;
     min-height: 1.44rem;
     padding-left: 1.5rem;
+    margin-right: 3%;
 }
 
 .custom-control-inline {
